tests/vertical-slice/reject/await_stream_recv_deadline_deferred.hew
// Reject fixture (NEW-6b): `await stream.recv() | after d` — a deadline on a
// suspendable typed-STREAM next (`Stream<bytes>.recv()` yields the next frame as
// `Option<bytes>`). Only the actor-ask deadline (`Result<R, AskError>`,
// `AskError::Timeout`) is wired in v0.5; stream-next deadlines are deferred to
// v0.6 (their `Option` timeout shaping is not yet specced) and fail CLOSED at
// CHECK time — a precise compile-time diagnostic naming the form, NOT a runtime
// NotYetImplemented and NOT a hang.
//
// Harness verb: hew compile (must fail)
// Expected diagnostic substring: "only supported for actor-ask awaits"
import std::stream;

actor Pipeline {
    receive fn run() -> i64 {
        let (sink, input) = stream.bytes_pipe(8);
        let frame = await input.recv() | after 50ms;
        let _ = sink;
        match frame {
            Some(_b) => 1,
            None => -1,
        }
    }
}

fn main() -> i64 {
    let p = spawn Pipeline;
    match await p.run() {
        Ok(v) => v,
        Err(_e) => 0,
    }
}
